src/styles/settings.css
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  display: none;
}

input[type="number"], input[type="time"]{
  height: 22px;
  line-height: 22px !important;
  vertical-align: middle;
  padding: 0 0 0 10px !important;
  margin-left: 10px !important;
  max-width: 100px;
  border: 1px solid rgb(191, 191, 191);
  border-radius: 2px;
}

input[type="number"] {
  width: 50px;
}

html,
body,
.container {
  height: 400px;
  width: 800px;
  max-height: 400px;
  max-width: 800px;
}

.container {
  position: relative;
  height: 400px;
  width: 800px;
  margin: 20px 15px 0px;
  padding: 0;
  color: #505050!important;
  float: left;
  overflow: hidden;
}

.list {
  width: 800px;
  padding: 0;
  list-style: none;
  float: left;
  overflow-y: auto;
  margin-bottom: 40px;
}

.list li {
  min-height: 40px;
}

.list li #nag-nanny:checked ~ div {
  height: 110px
}

.list li #pomodoro-mode:checked ~ div {
  height: 200px;
}

.list li #stop-at-day-end:checked ~ div{
  height:70px;
}

.list li label {
  font-size: 14px;
  height: 22px;
  line-height: 22px;
  vertical-align: middle;
}

.list li input[type="checkbox"]{
  height: 1.3em;
  width: 1.3em;
  margin: 0px 0.4em 0.3em 0px;
}

.subsettings-details  {
  overflow: hidden;
  height: 0px;
  margin-left: 10px;
  transition:height 300ms ease-in-out;
}

.subsettings-details p {
  float: left;
  padding-right: 30px;
}

.subsettings-details p:last-child {
  float: none;
  clear: both;
}

.subsettings-details span {
  display: block;
  font-size: 14px;
  padding-top: 10px;
}

.footer {
  padding: 10px 15px;
  background-color: #f5f5f5;
  border-top: 1px solid #e5e5e5;
  font-size: 12px;
  color: #8A8888;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
}

.changelog {
  float: right;
  margin: 0;
  padding: 0;
}

#version a {
  color: #8A8888!important;
  text-decoration: none;
  line-height: 21px;
}

.description {
  border-left: 2px solid #dfdfdf;
  color: rgb(119, 119, 119);
  float: right;
  display: block;
  visibility: hidden;
  padding: 5px;
  width: 50%;
  margin: 0 20px!important;
}

.list li:hover .description {
  visibility: visible;
}

header {
  position: fixed;
  left: 0;
  right: 0;
  background: #ffffff;
  z-index: 100;
  box-shadow: inset 0px -1px 1px -1px #bbb;
}

header ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

header .tab-link {
  background: #fdfdfd;
  cursor: pointer;
  float: left;
  padding: 10px 20px;
}

header .active, header li:hover {
  border-bottom: 1px solid red;
  background: #F1F0F0!important;
}

.container .tabs {
  position: absolute;
  bottom: 42px;
  top: 0;
  left: 0px;
  padding-top: 15px;
  width: 2600px;
  overflow: hidden;
  transition:left 300ms ease-in-out;
}

.container .tabs[data-tab="2"] {
  left: -830px;
}

.container .tabs:not([data-tab="1"]) .tab-1{
  overflow: hidden;
}

.container .tabs[data-tab="3"] {
  left: -1660px;
}

.container .tab {
  float: left;
  height: 343px;
  overflow-x: hidden;
  overflow-y: auto;
  width: 800px;
  padding-left: 30px;
}

.container .tab-1 {
  width: 785px;
  padding-left: 0;
}

.container .tab-2 {
  padding-left: 45px;
}

/* Permissions tab */

.tab-3 .description {
  width: 40%;
}

.container .tab-3 {
  width: 785px;
}

.container .tab-3 h2 {
  margin-bottom: 15px;
  clear: both;
}

#origins-container, #perm-container, #custom-perm-container {
  display: inline;
}

.origin-list {
  border: 1px solid #CCCACA;
  list-style: none;
  max-height: 290px;
  border-radius: 3px;
  padding: 5px;
  overflow: auto;
  width: 375px;
  float: left;
  font-size: 12px;
}

.origin-list:empty {
  visibility: hidden;
}

.origin-list li {
  height: 23px;
  border-bottom: 1px solid #E8E8E8;
}

.origin-list li:hover {
  background: #f5f5f5;
}

.permissions-toolbar {
  width: 375px;
}

#custom-permissions-list li {
  line-height: 23px;
  vertical-align: middle;
  padding-left: 5px;
}

#permissions-list.filtered li {
  display: none;
}

#permissions-list.filtered li.filter {
  display: block;
}

#permissions-list li.disabled {
  opacity: .5;
  background-color: #ECECEC;
}

#permissions-list li.custom {
  outline: 2px solid blue;
}

.origin-list li:last-child {
  border-bottom: none;
}

.section {
  float: left;
}

.section:hover .description {
  visibility: visible;
}

#permissions-list li div {
  height: 23px;
  line-height: 23px;
  vertical-align: middle;
  float: left;
}

#permissions-list li input {
  float: left;
  margin-right: 10px;
  margin-left: 5px;
  margin-top: 5px;
}

#permission-filter {
  width: 210px;
  float: left;
  padding-right: 20px;
}

#filter-clear {
  display: none;
  width: 18px;
  height: 18px;
  line-height: 14px;
  vertical-align: middle;
  text-decoration: none;
  color: #6b6969;
  font-size: 16px;
  font-weight: bold;
  margin-left: -21px;
  position: relative;
  float: left;
  text-align: center;
  margin-top: 3px;
}

#filter-clear:hover {
  color: #ffffff;
  background-color: #6b6969;
  border-radius: 20px;
}

.filtered ~#filter-clear {
  display: block;
}

.button-container {
  float: right;
}

#default-project-container {
  display: inline;
}

#default-project {
  margin-left: 5px;
  max-width: 280px;
}

.remove-custom {
  display: block;
  float: left;
  text-align: center;
  text-align: left;
  text-decoration: none;
  color: #EF2D2D;
  font-size: 9px;
  cursor: pointer;
  margin-right: 5px;
  line-height: 12px;
  padding: 5px;
  float: right;
}

.remove-custom:hover {
  color: #ffffff;
  background-color: #EF2D2D;
}

.guide-container {
  display: none;
}

.guide-back {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background: grey;
  z-index: 999;
  opacity: 0.5;
}

.guide {
  width: 400px;
  position: relative;
  background: #ffffff;
  border: 1px solid #d9d9d9;
  border-radius: 5px;
  padding: 15px;
  line-height: 20px;
  z-index: 999;
  margin: 20px auto;
  box-shadow: 1px 1px 10px #CACACA;
}

.guide > div {
  display: none;
}

/* Pomodoro tab */

#sound-volume {
  width: 80px;
  margin-left: 20px;
  position: relative;
  top: 4px;
}

#volume-label {
  display: inline-block;
  margin-left: 8px;
  height: 16px;
  width: 40px;
  text-align: right;
  margin-right: 5px;
}

#sound-test {
  position: relative;
  right: -28px;
}

.pomodoro-sound {
  clear: both;
}

.pomodoro-sound-volume {
  overflow: hidden;
  height: 0px;
  transition:height 300ms ease-in-out;
}

#enable-sound-signal:checked ~.pomodoro-sound-volume {
  height: 36px;
}

.ff .tab-3 .section:first-of-type {
  display: none!important;
}

.ff .tab {
  height: 100%;
}

.ff .footer, .ff .header {
  background: transparent;
}

.ff .list {
  width: auto;
  padding-right: 15px;
  font-size: 12px;
}

.ff .subsettings-details {
  max-width: 45%;
}

.ff header, .ff header .tab-link {
  background: transparent;
}

.ff .container .tabs {
  width: 2800px;
}

.ff .tab-3 .section h2 {
  font-size: 15px;
  font-weight: 400;
}

